--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.h2.console.enabled=true
 
 # Configuración del servidor
 server.port=8080
+
+# OPEN API
+# http://localhost:8080/swagger-ui/index.html  ASI HAY QUE LLAMARLO
